@@ -3,7 +3,7 @@
 -	Get this working on more browsers.
 
 CORBA:
-	Local (client-side) file I/O
+	Local (client-side) imports and exports
 
 Everywhere:
 	Disable X-closing for all windows and dialogs except for main window
