@@ -1,0 +1,57 @@
+
+/**************************************************************************
+ *                                                                        *
+ *  Regina - A Normal Surface Theory Calculator                           *
+ *  Java User Interface                                                   *
+ *                                                                        *
+ *  Copyright (c) 1999-2001, Ben Burton                                   *
+ *  For further details contact Ben Burton (benb@acm.org).                *
+ *                                                                        *
+ *  This program is free software; you can redistribute it and/or         *
+ *  modify it under the terms of the GNU General Public License as        *
+ *  published by the Free Software Foundation; either version 2 of the    *
+ *  License, or (at your option) any later version.                       *
+ *                                                                        *
+ *  This program is distributed in the hope that it will be useful, but   *
+ *  WITHOUT ANY WARRANTY; without even the implied warranty of            *
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU     *
+ *  General Public License for more details.                              *
+ *                                                                        *
+ *  You should have received a copy of the GNU General Public             *
+ *  License along with this program; if not, write to the Free            *
+ *  Software Foundation, Inc., 59 Temple Place, Suite 330, Boston,        *
+ *  MA 02111-1307, USA.                                                   *
+ *                                                                        *
+ **************************************************************************/
+
+/* end stub */
+
+package normal.packetfilter;
+
+import normal.engine.packet.NPacket;
+
+/**
+ * A <tt>PacketFilter</tt> that accepts all packets that can be happily
+ * separated from their parents.
+ * You should use <tt>Standalone.instance</tt> instead of creating a
+ * new <tt>Standalone</tt> filter every time one is required.  For this
+ * reason, the constructor for this class is private.
+ *
+ * @see normal.packetfilter.PacketFilter
+ */
+public class Standalone implements PacketFilter {
+    /**
+     * A globally available <tt>Standalone</tt> filter.
+     */
+    public static Standalone instance = new Standalone();
+
+    /**
+     * Creates a new standalone packet filter.
+     */
+    private Standalone() {
+    }
+
+    public boolean acceptPacket(NPacket packet) {
+        return (! packet.dependsOnParent());
+    }
+}
